    - cleanup_packages: Remove check for schroot when removing build
      dependencies, since schroot is the default.
  * Sbuild/Chroot.pm:
    - Remove all special casing for sudo and schroot.  schroot is now the
      only supported method of accessing chroots.
    - end_session: Only attempt to end a session when $schroot_session is
      non-empty.
  * Sbuild/Conf.pm:
    - Don't export $source_dependencies.
    - Don't define $source_dependencies.
    - Abort with an error if $source_dependencies is defined.
    - Don't export $sudo or $chroot_mode.
    - Don't define $sudo or $chroot_mode.
    - Remove sudo sanity checks.
    - Abort with an error if $sudo or $chroot_mode are defined.
  * sbuild.conf:
    - Remove $source_dependencies.
    - Remove $sudo.
  * sbuild.conf.local: Remove $source_dependencies.
  * sbuild-setup.7.in: Remove sudo setup.
  * bin/README.bins: Remove sudo from extra package list.
  * chroot/add_sbuild_user: Remove sudo setup instructions and copying of
    /etc/sudoers to the chroot.
  * TODO: New file.  Document needed changes.

 -- Roger Leigh <rleigh@debian.org>  Sat, 10 Mar 2007 10:53:46 +0000

sbuild (0.53) unstable; urgency=low

  * Sbuild/Conf.pm: Add and export check_watches configuration variable.
  * sbuild:
    - Set umask to 022 so that dpkg-buildpackage always runs with a sane
      umask (Closes: #405836).
    - check_watches: Don't check watches if check_watches configuration
      variable isn't set (Closes: #397123).
    - get_apt_policy: Allow ~ in version numbers.  Thanks to Frank
      Lichtenheld for this patch (Closes: #407293).
    - When running apt-cache, divert STDOUT to the package log, so that
      warnings do not get mailed separately (Closes: #399178).
    - fetch_source_files:
      + Correct indentation, and error with brace placement which caused
        apt-cache output to not be used.
      + Add package information into the key of the %entries hash, in